infra/dev/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-ingress
  labels:
    app: rancher-ingress
  annotations:
    # Indica que é para ser usado apenas em dev/local
    infra.dev/role: "ingress"
spec:
  type: NodePort
  selector:
    app: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-host
  labels:
    app: rancher-host
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: rancher
