infra/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  labels:
    app: rancher-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rancher.local
      secretName: tls-rancher-ingress
  rules:
    - host: rancher.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher-host
                port:
                  number: 443
